# gitHandler

./: .gitignore  README.md  build_deb.sh  install.sh  pyproject.toml  uninstall.sh
tests/: conftest.py  test_add_to_agent.py  test_config.py  test_core.py  test_core_wrapper.py  test_diff_helpers.py  test_fingerprint_dup.py  test_fix_permissions.py  test_gui_integration.py  test_json_logging.py  test_settings.py  test_ssh_keys.py  test_ui_choose_key.py  test_update_remote.py  test_update_remote_variants.py
tools/: __init__.py  cli.py  clone_actions.py  config.py  core.py  gui_tk.py  settings.py  ssh_config.py  ssh_keys.py  ui_tui.py
tools/gui/: __init__.py  css.py  widgets.py
tools/gui/pages/: __init__.py
